--- a/CV.html
+++ b/CV.html
@@ -4,7 +4,7 @@
 
 <body>
     <h1>Muayad Billah Almahayni</h1>
-    <img src="whatever.pdf" alt="My photo" width="150">
+    <img src="Photo 2.jpeg" alt="My photo" width="150">
     <h2>Summary</h2>
     <p>Computer Engineering and Computer Science graduate who has lost all hope in life. I'm living just for the heck of it,
         I might not seem that depressed, but I actually want my life to end as soon as possible.</p>
